--- a/blox/my-block.html
+++ b/blox/my-block.html
@@ -6,25 +6,34 @@
 {{ $block := .wcBlock }}
 
 {{/* Your Hugo variables */}}
-{{/* Access custom front matter content via `$block.content`. */}}
-{{/* E.g. access a `title` field via `$block.content.title`. */}}
-{{/* Pipe the field to `$page.RenderString` to parse it as Markdown. */}}
-{{ $title := $block.content.title | $page.RenderString }}
-{{ $text := $block.content.text | $page.RenderString }}
+{{ $author := "" }}
+{{ if .author }}
+  {{ $author = .author }}
+{{ else }}
+  {{ $author = $block.content.username }}
+{{end}}
 
-{{/* Add your block layout below */}}
-{{/* Styles (in the form of vanilla CSS) can be added to the CSS file. */}}
-{{/* Tailwind styles can optionally be used with the extra step of compiling Tailwind. */}}
-{{/* Access custom front matter design options via `$block.design`. */}}
-{{/* E.g. access a `show_title` field via `$block.design.show_title`. */}}
+{{ $person_page_path := (printf "/authors/%s" $author) }}
+{{ $person_page := site.GetPage $person_page_path }}
+{{ if not $person_page }}
+  {{ errorf "Could not find an author page at `%s`. Please check the value of `author` in your About widget and create an associated author page if one does not already exist. See https://wowchemy.com/docs/page-builder/#about " $person_page_path }}
+{{end}}
+{{ $person := $person_page.Params }}
+{{ $avatar := ($person_page.Resources.ByType "image").GetMatch "*avatar*" }}
+{{ $avatar_shape := site.Params.features.avatar.shape | default "square" }}
 
-<div class="flex flex-col items-center max-w-prose mx-auto gap-3 justify-center">
+<!-- <img src="uploads/long-narrow.png " alt="Thanh-Long V. Le"> -->
 
-  <div class="mb-6 text-3xl font-bold text-gray-900 dark:text-white">
-    {{ $title }}
-  </div>
+# **Thanh-Long V. Le**
 
-  {{ with $text }}
-    <p class="prose prose-slate lg:prose-xl dark:prose-invert max-w-prose">{{ . }}</p>
-  {{ end }}
+<div id='intro'>
+Hello there. Glad to have you here!
+
+I am a first-year M.S. student at <a class='ref' href="https://gsai.kaist.ac.kr/">KAIST AI</a>, co-advised by <a class='ref' href="https://mli.kaist.ac.kr/people/">Prof. Eunho Yang</a> and <a class='ref' href="https://laiviet.github.io/">Dr. Viet Lai</a> (Adobe Research). My research interests broadly span large language models (LLMs), with a particular focus on improving their reasoning abilities through reinforcement learning and other post-training methods.
+
+<div class='br'><br></div>
+Previously, I received my B.S. degree in Computer Science from <a class='ref' href="https://www.kaist.ac.kr/en/">KAIST</a>, where I was advised by <a class='ref' href="https://sites.google.com/site/wewantsj/">Prof. Sung-Ju Lee</a>.
+
+<div class='br'><br></div>
+[{{< icon name="envelope" pack="fas" >}} Email](mailto:thanhlongtdk2000@gmail.com) &nbsp;&nbsp;&nbsp;&nbsp; [{{< icon name="linkedin" pack="fas" >}} LinkedIn](https://www.linkedin.com/in/bltnynk/) &nbsp;&nbsp;&nbsp;&nbsp; [{{< icon name="graduation-cap" pack="fas" >}} Google Scholar](https://scholar.google.com/citations?user=XjoR4p4AAAAJ&hl=en) &nbsp;&nbsp;&nbsp;&nbsp;
 </div>
