--- a/blox/github.bltnynk.about.html
+++ b/blox/github.bltnynk.about.html
@@ -35,5 +35,5 @@ I am a first-year M.S. student at <a class='ref' href="https://gsai.kaist.ac.kr/
 Previously, I received my B.S. degree in Computer Science from <a class='ref' href="https://www.kaist.ac.kr/en/">KAIST</a>, where I was advised by <a class='ref' href="https://sites.google.com/site/wewantsj/">Prof. Sung-Ju Lee</a>.
 
 <div class='br'><br></div>
-[{{< icon name="envelope" pack="fas" >}} Email](mailto:thanhlongtdk2000@gmail.com) &nbsp;&nbsp;&nbsp;&nbsp; [{{< icon name="linkedin" pack="fas" >}} LinkedIn](https://www.linkedin.com/in/bltnynk/) &nbsp;&nbsp;&nbsp;&nbsp; [{{< icon name="graduation-cap" pack="fas" >}} Google Scholar](https://scholar.google.com/citations?user=XjoR4p4AAAAJ&hl=en) &nbsp;&nbsp;&nbsp;&nbsp;
+<!-- [{{< icon name="envelope" pack="fas" >}} Email](mailto:thanhlongtdk2000@gmail.com) &nbsp;&nbsp;&nbsp;&nbsp; [{{< icon name="linkedin" pack="fas" >}} LinkedIn](https://www.linkedin.com/in/bltnynk/) &nbsp;&nbsp;&nbsp;&nbsp; [{{< icon name="graduation-cap" pack="fas" >}} Google Scholar](https://scholar.google.com/citations?user=XjoR4p4AAAAJ&hl=en) &nbsp;&nbsp;&nbsp;&nbsp; -->
 </div>
