--- a/blox/github.bltnynk.about.html
+++ b/blox/github.bltnynk.about.html
@@ -27,7 +27,7 @@
 # **Thanh-Long V. Le**
 
 <div id='intro'>
-Hello there. Glad to have you here!
+Greetings. Glad to have you here!
 
 I am a first-year M.S. student at <a class='ref' href="https://gsai.kaist.ac.kr/">KAIST AI</a>, co-advised by <a class='ref' href="https://mli.kaist.ac.kr/people/">Prof. Eunho Yang</a> and <a class='ref' href="https://laiviet.github.io/">Dr. Viet Lai</a> (Adobe Research). My research interests broadly span large language models (LLMs), with a particular focus on improving their reasoning abilities through reinforcement learning and other post-training methods.
 
@@ -35,5 +35,4 @@ I am a first-year M.S. student at <a class='ref' href="https://gsai.kaist.ac.kr/
 Previously, I received my B.S. degree in Computer Science from <a class='ref' href="https://www.kaist.ac.kr/en/">KAIST</a>, where I was advised by <a class='ref' href="https://sites.google.com/site/wewantsj/">Prof. Sung-Ju Lee</a>.
 
 <div class='br'><br></div>
-<!-- [{{< icon name="envelope" pack="fas" >}} Email](mailto:thanhlongtdk2000@gmail.com) &nbsp;&nbsp;&nbsp;&nbsp; [{{< icon name="linkedin" pack="fas" >}} LinkedIn](https://www.linkedin.com/in/bltnynk/) &nbsp;&nbsp;&nbsp;&nbsp; [{{< icon name="graduation-cap" pack="fas" >}} Google Scholar](https://scholar.google.com/citations?user=XjoR4p4AAAAJ&hl=en) &nbsp;&nbsp;&nbsp;&nbsp; -->
 </div>
